--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="snackbar-root"></div>
     <script src="https://kit.fontawesome.com/c205cc04c6.js"></script>
   </body>
 </html>
